# app/infra/rest/spec/openapi.json
@@ -152,6 +152,45 @@
           }
         }
       }
+    },
+    "/friend/set/{user_id}": {
+      "put": {
+        "operationId": "add_friend",
+        "x-openapi-router-controller": "infra.rest.friends",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "user_id",
+            "schema": {
+              "$ref": "#/components/schemas/UserId"
+            },
+            "required": true,
+            "in": "path",
+            "description": "Идентификатор пользователя для добавления в друзья"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Пользователь успешно указал своего друга"
+          },
+          "400": {
+            "description": "Невалидные данные"
+          },
+          "401": {
+            "description": "Требуется аутентификация"
+          },
+          "500": {
+            "$ref": "#/components/responses/5xx"
+          },
+          "503": {
+            "$ref": "#/components/responses/5xx"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -159,7 +198,8 @@
       "bearerAuth": {
         "type": "http",
         "scheme": "bearer",
-        "description": "Авторизация по токену, который был получен в методе /login"
+        "description": "Авторизация по токену, который был получен в методе /login",
+        "x-bearerInfoFunc": "application.jwt_service.JWTService.verify_token"
       }
     },
     "responses": {
